Deleting group with multiple people in it seems to work